@@ -6,8 +6,9 @@
     <ul class="knode">
       <li class="kchild">
         <div class="kel">
-          <div class="call"><span class="kcaller"> {callerFile}, </span> line <span class="kcaller">{callerLine}</span></div><br/>
-          <div class="call">At: <span class="kcaller">{date}</span></div>
+          <div class="call"><span class="kcaller">{callerFile}, </span> line <span class="kcaller">{callerLine}</span></div><br/>
+          <div class="call">At: <span class="kcaller">{date}</span></div><br/>
+          <div class="call">Url: <span class="kcaller">{callerUrl}</span></div>
         </div>
       </li>
     </ul>
